k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buildnest-ecommerce
  labels:
    app: buildnest-ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: buildnest-ecommerce
  template:
    metadata:
      labels:
        app: buildnest-ecommerce
    spec:
      containers:
        - name: buildnest-ecommerce
          image: buildnest-ecommerce:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
